--- a/productLanding/product.html
+++ b/productLanding/product.html
@@ -1,39 +1,101 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>My Product</title>
+        <link rel="stylesheet" type="text/css" href="productStyle.css">
+    </head>
+    <body>
 
-<head>
-    <link rel="stylesheet" type="text/css" href="productStyle.css">
-</head>
-
-<body>
-
-    <div>
-        <header id="header">
-            <img class="header-img" id="header-img" src="https://upload.wikimedia.org/wikipedia/commons/9/92/UNIQLO_logo.svg">
-            <div id="nav-bar" class="topnav">
-            <ul>
-                <li class="nav-link"><a href="#pricing">Pricing</a></li>
-                <li class="nav-link"><a href="#how-it-works">How It Works</a></li>
-                <li class="nav-link"><a href="#features">Features</a></li>
-            </ul>
-            </div>
+        <header>
+            <nav id="nav-bar"><img id="header-img" width="50px" src='../productLanding/img/sweatshirt.png'>
+                <h1 class="main-heading">The Hoody</h1>
+                <ul class="nav-link">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                </ul>
+            </nav>
         </header>
-    </div>
 
-    <div class="container">
-
-    </div>
-
-    <div class="container">
-        <div class="feature-container">
-        <section id="features">
-            <img class="feature-img" src="img/1.jpg">
-        </section>
+        <div id="form" class="container">
+            <form class="email-form">
+                <h2>Hand-made Tailored Hoody</h2>
+                <input id="email" type="email" name="email" placeholder="Enter your email address">
+                <input id="submit" class="button" type="submit" value="GET STARTED">
+            </form>
         </div>
-    </div>
 
+        <div id="about" class="container">
+            <div class="about">
+                <img width="80px" src="img/pullOver.png">
+                <h3>The Pullover</h3>
+                <p>A hoody without a hoody. A custom tailor made
+                    sweatshirt.Proving the point that not all hoodies
+                    are made equal.
+                </p>
+            </div>
 
+            <div class="about">
+                <img width="80px" src="img/zipUp.png">
+                <h3>The Zip Up</h3>
+                <p>A hoody with a zippy. A custom made hoody that is able
+                    to open up in the front. Zipper comes with life-time
+                    warranty.
+                </p>
+            </div>
 
-</body>
+            <div class="about">
+                <img width="80px" src="img/classic.png">
+                <h3>The Classic</h3>
+                <p>The original hoody. Comes with all the right feautres.
+                    Custom made to fit any body-type and any style.
+                </p>
+            </div>
+        </div>
 
+        <div id="features" class="container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2U4WN3XqyVc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <div id="pricing" class="container">
+            <div class="pricing">
+                <h3>The Pullover</h3>
+                <p>Lorem ipsum.
+                    Lorem ipsum.
+                    Lorem ipsum dolor.
+                    Lorem ipsum.</p>
+                <input type="button" value="SELECT">
+            </div>
+
+            <div class="pricing">
+                <h3>The Pullover</h3>
+                <p>Lorem ipsum.
+                Lorem ipsum.
+                Lorem ipsum dolor.
+                Lorem ipsum.</p>
+                <input type="button" value="SELECT">
+            </div>
+
+            <div class="pricing">
+                <h3>The Pullover</h3>
+                <p>Lorem ipsum.
+                Lorem ipsum.
+                Lorem ipsum dolor.
+                Lorem ipsum.</p>
+                <input type="button" value="SELECT">
+            </div>
+        </div>
+
+        <footer id="main-footer">
+            <ul>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li>Contact</li>
+            </ul>
+            <p>
+                Copyright 2016, &copy; The Hoody
+            </p>
+        </footer>
+
+    </body>
 </html>
