--- a/productLanding/product.html
+++ b/productLanding/product.html
@@ -17,15 +17,19 @@
             </nav>
         </header>
 
-        <div id="form" class="container">
+        <div class="body-container">
+
+        <div id="form" class="email-container">
             <form class="email-form">
                 <h2>Hand-made Tailored Hoody</h2>
-                <input id="email" type="email" name="email" placeholder="Enter your email address">
-                <input id="submit" class="button" type="submit" value="GET STARTED">
+                <div class="email-input">
+                    <input id="email" type="email" name="email" placeholder="Enter your email address">
+                    <input id="submit" class="button" type="submit" value="GET STARTED">
+                </div>
             </form>
         </div>
 
-        <div id="about" class="container">
+        <div id="about" class="about-container">
             <div class="about">
                 <img width="80px" src="img/pullOver.png">
                 <h3>The Pullover</h3>
@@ -53,11 +57,11 @@
             </div>
         </div>
 
-        <div id="features" class="container">
+        <div id="features" class="features-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2U4WN3XqyVc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <div id="pricing" class="container">
+        <div id="pricing" class="pricing-container">
             <div class="pricing">
                 <h3>The Pullover</h3>
                 <p>Lorem ipsum.
@@ -84,6 +88,8 @@
                 Lorem ipsum.</p>
                 <input type="button" value="SELECT">
             </div>
+        </div>
+
         </div>
 
         <footer id="main-footer">
